Updating pom