@@ -8,70 +8,19 @@
     <artifactId>Project_Timetable</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Project_Timetable</name>
-    <profiles><profile>
-        <id>sonar</id>
-        <properties>
-            <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        </properties>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                </plugin>
-                <plugin>
-                    <groupId>org.sonarsource.scanner.maven</groupId>
-                    <artifactId>sonar-maven-plugin</artifactId>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-        <profile>
-            <id>coverage</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.7</version>
-                        <executions>
-                            <execution>
-                                <id>prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>report</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile></profiles>
-
 
     <properties>
-        <sonar.jdbc.dialect>mssql</sonar.jdbc.dialect>
-        <sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-        <sonar.projectKey>com.example.project_timetable:Project_Timetable</sonar.projectKey>
-        <sonar.projectName>Project_Timetable</sonar.projectName>
-        <sonar.projectVersion>1.0-SNAPSHOT</sonar.projectVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.version>5.7.1</junit.version>
         <sonar.organization>ringo2901</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <java.version>17</java.version>
-
     </properties>
 
     <dependencies>
@@ -90,8 +39,6 @@
             <artifactId>javafx-graphics</artifactId>
             <version>17.0.0.1</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
@@ -194,54 +141,51 @@
 
         <plugins>
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.3.0.603</version>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sonar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <argLine>@{argLine} --illegal-access=permit</argLine>
                     <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     <argLine>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
                     <argLine>--add-opens com.example.project_timetable/com.example.project_timetable=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
-                <configuration>
-                    <dataFile>${project.basedir}/../target/jacoco.exec</dataFile>
-                    <append>true</append>
-                </configuration>
                 <executions>
                     <execution>
-                        <id>pre-unit-test</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <propertyName>jacoco.agent.argLine</propertyName>
-                            <destFile>${project.basedir}/../target/jacoco.exec</destFile>
-                        </configuration>
                     </execution>
                     <execution>
-                        <id>default-report</id>
-                        <phase>verify</phase>
+                        <id>jacoco-report</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
